infra/timeweb/10-gitops/apps/pgadmin/pgadmin.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pgadmin
  namespace: pgadmin
  annotations:
    argocd.argoproj.io/sync-wave: "40"
  labels:
    app: pgadmin
spec:
  type: ClusterIP
  selector:
    app: pgadmin
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
